--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.738.0",
+		"@aws-sdk/s3-request-presigner": "^3.741.0",
 		"@hookform/resolvers": "^3.10.0",
 		"@libsql/kysely-libsql": "^0.4.1",
 		"@radix-ui/react-avatar": "^1.1.2",
@@ -41,6 +43,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.4",
+		"kysely-codegen": "^0.17.0",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
