--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"codegen": "kysely-codegen --env-file ./.env.local --out-file ./types/db.d.ts"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.738.0",
