--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"kysely": "^0.27.5",
 		"lucide-react": "^0.471.1",
 		"next": "15.2.4",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
