--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@aws-sdk/s3-request-presigner": "^3.879.0",
 		"@hookform/resolvers": "^3.10.0",
 		"@libsql/kysely-libsql": "^0.4.1",
+		"@radix-ui/react-alert-dialog": "^1.1.15",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
