--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"better-sqlite3": "^11.10.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"jotai": "^2.15.1",
 		"kysely": "^0.27.6",
 		"lucide-react": "^0.471.2",
 		"next": "15.2.4",
